--- a/Module3-assignment/css/bootstrap.css
+++ b/Module3-assignment/css/bootstrap.css
@@ -4298,8 +4298,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   float: right;
   padding: 9px 10px;
+  margin-top: 8px;
   margin-right: 15px;
-  margin-bottom: 28px;
+  margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
   border: 1px solid transparent;
